Criado pro the servs

--- a/template.tex
+++ b/template.tex
@@ -67,7 +67,6 @@
 
 
 \section{Idiomas}
-\cvitemwithcomment{Português}{Língua materna}{}
 \cvitemwithcomment{Inglês}{Avançado}{}
 
 \section{Proficiência}
@@ -75,6 +74,9 @@
 \cvitem{Intermediario}{C, \LaTeX, SQL, MySQL}{}{}
 \cvitem{Básico}{CSS, C\#}{}{}
 
+\section{Produções}
+\cvitem{Classificação de cafés}{Projeto desenvolvido no instituto onde grãos de cafés eram classificados usanado processamento digital de imagens.}{}{}
+\cvitem{Elevador Didático}{Projeto desenvolvido no instituto onde foi construido um elevador para o ensino de automação.}{}{}
 
 % Publications from a BibTeX file without multibib
 %  for numerical labels: \renewcommand{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}% CONSIDER MERGING WITH PREAMBLE PART
